Add netbox_fhrp_group to action group

--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -36,6 +36,7 @@ action_groups:
     - netbox_device_role
     - netbox_device_type
     - netbox_export_template
+    - netbox_fhrp_group
     - netbox_front_port
     - netbox_front_port_template
     - netbox_inventory_item
