--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -11,6 +11,7 @@ plugin_routing:
 action_groups:
   netbox:
     - netbox_aggregate
+    - netbox_asn
     - netbox_cable
     - netbox_circuit
     - netbox_circuit_termination
