--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -47,6 +47,7 @@ action_groups:
     - netbox_ipam_role
     - netbox_journal_entry
     - netbox_l2vpn
+    - netbox_l2vpn_termination
     - netbox_location
     - netbox_manufacturer
     - netbox_module_type
