Added tests for netbox_l2vps_termination module

--- a/tests/integration/targets/v3.3/tasks/main.yml
+++ b/tests/integration/targets/v3.3/tasks/main.yml
@@ -247,6 +247,15 @@
   tags:
     - netbox_l2vpn
 
+- name: "NETBOX_L2VPN_TERMINATION TESTS"
+  include_tasks:
+    file: "netbox_l2vpn_termination.yml"
+    apply:
+      tags:
+        - netbox_l2vpn_termination
+  tags:
+    - netbox_l2vpn_termination
+
 - name: "NETBOX_INVENTORY_ITEM_ROLE TESTS"
   include_tasks: 
     file: "netbox_inventory_item_role.yml"
