--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,16 @@
 [tool.poetry]
 name = "netbox_ansible_modules"
-version = "3.12.0"
+version = "3.11.0"
 description = "Ansible collection to interact with NetBox's API"
 authors = ["Mikhail Yohman <mikhail.yohman@gmail.com>"]
 license = "GPLv3"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-ansible-core = "2.14.*"
+python = "^3.8"
+ansible-core = "2.13.*"
 black = "*"
 codecov = "*"
-coverage = "6.5.0"
+coverage = "^4.0"
 cryptography = "*"
 jinja2 = "*"
 jmespath = "*"
@@ -21,7 +21,7 @@ pytest-mock = "*"
 pytest-xdist = "*"
 pytest-forked = "*"
 pyyaml = "*"
-mock = "*"
+mock = "^4.0.2"
 antsibull = "*"
 importlib-metadata = "*"
 pylint = "*"
