--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,27 @@ name: All CI related tasks
 on: [push, pull_request]
 
 jobs:
-  linting_unit_testing:
+  #linting:
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #    - name: Checkout repo
+  #      uses: actions/checkout@v3
+  #    - name: Run black
+  #      uses: psf/black@stable
+  #    - name: 'Yamllint'
+  #      uses: karancode/yamllint-github-action@master
+  #    #- name: Run isort
+  #    #  uses: jamescurtin/isort-action@master
+  #    #- name: Run ruff
+  #    #  uses: chartboost/ruff-action@v1
+
+  unit_testing:
     runs-on: ubuntu-latest
+    #needs: linting
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -28,8 +43,6 @@ jobs:
         run: |
           ansible-galaxy collection build .
           ansible-galaxy collection install netbox*.tar.gz -p /home/runner/.ansible/collections
-      - name: Run Black
-        run: poetry run black . --check --diff
       - name: Run Ansible Sanity tests
         run: poetry run ansible-test sanity -v --requirements --python ${{ matrix.python-version }} --skip-test pep8 plugins/
         working-directory: /home/runner/.ansible/collections/ansible_collections/netbox/netbox
@@ -39,20 +52,20 @@ jobs:
       - name: Run Ansible Coverage
         run: poetry run ansible-test coverage report --all --omit "tests/*,hacking/*,docs/*" --show-missing
         working-directory: /home/runner/.ansible/collections/ansible_collections/netbox/netbox
-  integration:
+  integration_testing:
     runs-on: ubuntu-latest
-    needs: linting_unit_testing
+    #needs: unit_testing
     strategy:
       fail-fast: false
       matrix:
         include:
-          - python-version: 3.9
+          - python-version: "3.8"
             VERSION: "v3.2"
             INTEGRATION_TESTS: "v3.2"
-          - python-version: 3.9
+          - python-version: "3.8"
             VERSION: "v3.3"
             INTEGRATION_TESTS: "v3.3"
-          - python-version: 3.9
+          - python-version: "3.8"
             VERSION: "v3.4"
             INTEGRATION_TESTS: "v3.4"
     steps:
