--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,56 +25,67 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.9", "3.10"]
+
     steps:
+
       - name: Checkout repo
         uses: actions/checkout@v3
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install and configure Poetry
         uses: snok/install-poetry@v1
         with:
           virtualenvs-create: false
+
       - name: Install Python packages
         run: poetry install
+
       - name: Build and install collection
         run: |
           ansible-galaxy collection build .
           ansible-galaxy collection install netbox*.tar.gz -p /home/runner/.ansible/collections
+
       - name: Run Ansible Sanity tests
         run: poetry run ansible-test sanity -v --requirements --python ${{ matrix.python-version }} --skip-test pep8 plugins/
         working-directory: /home/runner/.ansible/collections/ansible_collections/netbox/netbox
+
       - name: Run Ansible Unit tests
         run: poetry run ansible-test units -vvv --coverage --python ${{ matrix.python-version }}
         working-directory: /home/runner/.ansible/collections/ansible_collections/netbox/netbox
+
       - name: Run Ansible Coverage
         run: poetry run ansible-test coverage report --all --omit "tests/*,hacking/*,docs/*" --show-missing
         working-directory: /home/runner/.ansible/collections/ansible_collections/netbox/netbox
+
   integration_testing:
     runs-on: ubuntu-latest
     #needs: unit_testing
+    env:
+      python-version: "3.9"
     strategy:
       fail-fast: false
       matrix:
         include:
-          - python-version: "3.9"
-            VERSION: "v3.2"
-            INTEGRATION_TESTS: "v3.2"
-          - python-version: "3.9"
-            VERSION: "v3.3"
-            INTEGRATION_TESTS: "v3.3"
-          - python-version: "3.9"
-            VERSION: "v3.4"
-            INTEGRATION_TESTS: "v3.4"
+          - VERSION: "v3.2"
+            NETBOX_DOCKER_VERSION: 1.6.1
+          - VERSION: "v3.3"
+            NETBOX_DOCKER_VERSION: 2.3.0
+          - VERSION: "v3.4"
+            NETBOX_DOCKER_VERSION: 2.5.3
+          #- VERSION: "v3.5"
+          #  NETBOX_DOCKER_VERSION: 2.6.1
+        #python-version: ["3.9", "3.10", "3.11"]
+
     steps:
+
       - name: Checkout repo
         uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
+
       - name: Clone & Start netbox-docker containers - 3.2
         env:
           VERSION: ${{ matrix.VERSION }}
@@ -95,72 +106,92 @@ jobs:
           docker container ls
           cd ..
         if: matrix.VERSION == 'v3.2'
-      - name: Clone & Start netbox-docker containers - 3.3
+
+      - name: Clone & Start netbox-docker containers - ${{env.VERSION}}
         env:
           VERSION: ${{ matrix.VERSION }}
+          DOCKER_TAG: ${{ matrix.NETBOX_DOCKER_VERSION }}
         run: |
           cd ..
           git clone https://github.com/netbox-community/netbox-docker.git
           cd netbox-docker
-          git checkout 2.2.0
+          git checkout $DOCKER_TAG
           tee docker-compose.override.yml <<EOF
           version: '3.4'
           services:
             netbox:
-              image: netboxcommunity/netbox:v3.3
+              image: netboxcommunity/netbox:$VERSION
               ports:
                 - 32768:8080
           EOF
-          docker-compose up -d --quiet-pull
+          docker-compose up -d --quiet-pull netbox netbox-worker postgres redis redis-cache
           docker container ls
           cd ..
-        if: matrix.VERSION == 'v3.3'
+        if: matrix.VERSION == 'v3.2'
+
       - name: Clone & Start netbox-docker containers - 3.4
         env:
           VERSION: ${{ matrix.VERSION }}
+          DOCKER_TAG: ${{ matrix.NETBOX_DOCKER_VERSION }}
         run: |
           cd ..
           git clone https://github.com/netbox-community/netbox-docker.git
           cd netbox-docker
-          git checkout 2.3.0
+          git checkout $DOCKER_TAG
           tee docker-compose.override.yml <<EOF
           version: '3.4'
           services:
             netbox:
-              image: netboxcommunity/netbox:v3.4
+              image: netboxcommunity/netbox:$VERSION
               ports:
                 - 32768:8080
+              healthcheck:
+                start_period: 300s
+                timeout: 3s
+                interval: 15s
+                test: "curl -f http://localhost:8080/api/ || exit 1"
           EOF
-          docker-compose up -d --quiet-pull
+          docker-compose up -d --quiet-pull netbox netbox-worker postgres redis redis-cache
           docker container ls
           cd ..
-        if: matrix.VERSION == 'v3.4'
+        if: matrix.VERSION != 'v3.2'
+
+      - name: Set up Python ${{ env.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.python-version }}
+
       - name: Install and configure Poetry
         uses: snok/install-poetry@v1.3.3
         with:
           virtualenvs-create: false
+
       - name: Install Python packages
         run: poetry install
+
       - name: Build and install collection
         run: |
           ansible-galaxy collection install community.general -p /home/runner/.ansible/collections
           ansible-galaxy collection build .
           ansible-galaxy collection install netbox*.tar.gz -p /home/runner/.ansible/collections
+
       - name: Wait for NetBox to be available
         run: |
           docker container ls
           docker logs netbox-docker_netbox_1
           timeout 300 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:32768)" != "200" ]]; do echo "waiting for NetBox"; sleep 5; done' || false
         working-directory: /home/runner/.ansible/collections/ansible_collections/netbox/netbox
+
       - name: Pre-populate NetBox
         run: ./tests/integration/netbox-deploy.py
         working-directory: /home/runner/.ansible/collections/ansible_collections/netbox/netbox
+
       - name: Run integration tests
         # Run regression and integration tests
         # Run the inventory test first, in case any of the other tests modify the data.
         run: |
-          ansible-test integration -v --color --coverage --python ${{ matrix.python-version }} inventory-${{ matrix.INTEGRATION_TESTS }}
-          ansible-test integration -v --color --coverage --python ${{ matrix.python-version }} regression-${{ matrix.INTEGRATION_TESTS }}
-          ansible-test integration -v --color --coverage --python ${{ matrix.python-version }} ${{ matrix.INTEGRATION_TESTS }}
+          ansible-test integration -v --color --coverage --python ${{ env.python-version }} inventory-${{ matrix.VERSION }}
+          ansible-test integration -v --color --coverage --python ${{ env.python-version }} regression-${{ matrix.VERSION }}
+          ansible-test integration -v --color --coverage --python ${{ env.python-version }} ${{ matrix.VERSION }}
           ansible-test coverage report --all --omit "tests/*,hacking/*,docs/*" --show-missing
         working-directory: /home/runner/.ansible/collections/ansible_collections/netbox/netbox
