--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,6 +86,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+
       - name: Clone & Start netbox-docker containers - ${{env.VERSION}}
         env:
           VERSION: ${{ matrix.VERSION }}
@@ -95,7 +96,7 @@ jobs:
           ls
           git clone https://github.com/netbox-community/netbox-docker.git
           cd netbox-docker
-          cp ../ansible_modules/tests/netbox-docker/${{env.VERSION}}/docker-compose.override.yml docker-compose.override.yml
+          cp $GITHUB_WORKSPACE/tests/netbox-docker/${{env.VERSION}}/docker-compose.override.yml docker-compose.override.yml
           docker-compose up -d --quiet-pull netbox netbox-worker postgres redis redis-cache
           docker container ls
           cd ..
