--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      - name: Test
+        run: pwd
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
@@ -47,7 +50,6 @@ jobs:
 
       - name: Build and install collection
         run: |
-          pwd
           ansible-galaxy collection build .
           ansible-galaxy collection install netbox*.tar.gz -p /home/runner/.ansible/collections
 
