--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,7 +95,7 @@ jobs:
           cd ..
           git clone https://github.com/netbox-community/netbox-docker.git
           cd netbox-docker
-          cp ${{ GITHUB_WORKSPACE }}/tests/netbox-docker/${{env.VERSION}}/docker-compose.override.yml docker-compose.override.yml
+          cp $GITHUB_WORKSPACE/tests/netbox-docker/${{env.VERSION}}/docker-compose.override.yml docker-compose.override.yml
           docker-compose up -d --quiet-pull netbox netbox-worker postgres redis redis-cache
           docker container ls
           cd ..
