--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,6 +86,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      - run: ls ..
 
       - name: Clone & Start netbox-docker containers - ${{env.VERSION}}
         env:
