--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,7 +86,9 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - run: ls ..
+      - run: ls ../ansible_modules
+
+      - run: pwd
 
       - name: Clone & Start netbox-docker containers - ${{env.VERSION}}
         env:
