--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,9 +86,9 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - run: ls ../ansible_modules
+      - run: cat ../ansible_modules/tests/netbox-docker/v3.3/docker-compose.override.yml
 
-      - run: pwd
+      - run: cat $GITHUB_WORKSPACE /ansible_modules/tests/netbox-docker/v3.3/docker-compose.override.yml
 
       - name: Clone & Start netbox-docker containers - ${{env.VERSION}}
         env:
