--- a/tests/netbox-docker/v3.5/docker-compose.override.yml
+++ b/tests/netbox-docker/v3.5/docker-compose.override.yml
@@ -12,3 +12,9 @@ services:
       timeout: 3s
       interval: 15s
       test: "curl -f http://localhost:8080/api/ || exit 1"
+    environment:
+      SKIP_SUPERUSER: "false"
+      SUPERUSER_API_TOKEN: "0123456789abcdef0123456789abcdef01234567"
+      SUPERUSER_EMAIL: "admin@localhost.com"
+      SUPERUSER_NAME: "admin"
+      SUPERUSER_PASSWORD: "admin"
