--- a/tests/netbox-docker/v3.5/docker-compose.override.yml
+++ b/tests/netbox-docker/v3.5/docker-compose.override.yml
@@ -2,7 +2,12 @@
 version: '3.4'
 services:
   netbox-worker:  &netbox-override
-    image: netboxcommunity/netbox:$VERSION
+    image: netboxcommunity/netbox:v3.5
+    healthcheck:
+      start_period: 300s
+      timeout: 3s
+      interval: 15s
+      test: "ps -aux | grep -v grep | grep -q rqworker || exit 1"
   netbox:
     <<: *netbox-override
     ports:
