--- a/tests/netbox-docker/v3.4/docker-compose.override.yml
+++ b/tests/netbox-docker/v3.4/docker-compose.override.yml
@@ -2,7 +2,7 @@
 version: '3.4'
 services:
   netbox-worker:  &netbox-override
-    image: netboxcommunity/netbox::v3.4
+    image: netboxcommunity/netbox:v3.4
   netbox:
     <<: *netbox-override
     ports:
