--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,19 +5,24 @@ name: All CI related tasks
 on: [push, pull_request]
 
 jobs:
-  #linting:
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #    - name: Checkout repo
-  #      uses: actions/checkout@v3
-  #    - name: Run black
-  #      uses: psf/black@stable
-  #    - name: 'Yamllint'
-  #      uses: karancode/yamllint-github-action@master
-  #    #- name: Run isort
-  #    #  uses: jamescurtin/isort-action@master
-  #    #- name: Run ruff
-  #    #  uses: chartboost/ruff-action@v1
+  linting:
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Run black
+        uses: psf/black@stable
+
+      - name: 'Yamllint'
+        uses: karancode/yamllint-github-action@master
+
+      #- name: Run isort
+      #  uses: jamescurtin/isort-action@master
+
+      #- name: Run ruff
+      #  uses: chartboost/ruff-action@v1
 
   unit_testing:
     runs-on: ubuntu-latest
@@ -90,8 +95,8 @@ jobs:
         run: |
           cd ..
           git clone https://github.com/netbox-community/netbox-docker.git
-          git checkout ${{ matrix.NETBOX_DOCKER_VERSION }}
           cd netbox-docker
+          git checkout ${{ matrix.NETBOX_DOCKER_VERSION }}
           cp $GITHUB_WORKSPACE/tests/netbox-docker/${{ matrix.VERSION }}/docker-compose.override.yml docker-compose.override.yml
           docker-compose up -d --quiet-pull netbox netbox-worker postgres redis redis-cache
           docker container ls
@@ -122,6 +127,7 @@ jobs:
           docker logs netbox-docker_netbox_1
           timeout 300 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:32768)" != "200" ]]; do echo "waiting for NetBox"; sleep 5; done' || false
         working-directory: /home/runner/.ansible/collections/ansible_collections/netbox/netbox
+        if: matrix.VERSION in ['v3.2', 'v3.3']
 
       - name: Pre-populate NetBox
         run: ./tests/integration/netbox-deploy.py
