--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "GPLv3"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-ansible-core = "^2.14"
+ansible-core = "2.13.*"
 black = "*"
 codecov = "*"
 coverage = "^4.0"
