--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,7 +3,12 @@ version: 2
 #sphinx:
 #  configuration: docs/conf.py
 
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.9"
+
 python:
-  version: 3.8
+  version: 3.9
   install:
     - requirements: docs/requirements.txt
