--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,8 +80,8 @@ jobs:
             NETBOX_DOCKER_VERSION: 2.3.0
           - VERSION: "v3.4"
             NETBOX_DOCKER_VERSION: 2.5.3
-          #- VERSION: "v3.5"
-          #  NETBOX_DOCKER_VERSION: 2.6.1
+          - VERSION: "v3.5"
+            NETBOX_DOCKER_VERSION: 2.6.1
         # If we want to integration test wiht all supported Python:
         #python-version: ["3.9", "3.10", "3.11"]
 
