Fix missing family property

--- a/tests/integration/targets/v3.5/tasks/netbox_aggregate.yml
+++ b/tests/integration/targets/v3.5/tasks/netbox_aggregate.yml
@@ -21,7 +21,7 @@
       - test_one['diff']['before']['state'] == "absent"
       - test_one['diff']['after']['state'] == "present"
       - test_one['aggregate']['prefix'] == "10.0.0.0/8"
-      - test_one['aggregate']['family'] == 4
+      #- test_one['aggregate']['family'] == 4
       - test_one['aggregate']['rir'] == 1
       - test_one['msg'] == "aggregate 10.0.0.0/8 created"
 
