--- a/tests/integration/targets/v3.5/tasks/netbox_inventory_item.yml
+++ b/tests/integration/targets/v3.5/tasks/netbox_inventory_item.yml
@@ -37,7 +37,7 @@
 - name: "INVENTORY_ITEM 2: ASSERT - Create duplicate"
   ansible.builtin.assert:
     that:
-      - not test_two.changed.
+      - not test_two.changed
       - test_two.inventory_item.name == "10G-SFP+"
       - test_two.inventory_item.device == 1
       - test_two.msg == "inventory_item 10G-SFP+ already exists"
