981 fixes missing ignore_errors to integration test

--- a/tests/integration/targets/v3.5/tasks/netbox_inventory_item.yml
+++ b/tests/integration/targets/v3.5/tasks/netbox_inventory_item.yml
@@ -147,6 +147,7 @@
       name: test_processor
       inventory_item_role: Foo
     state: present
+  ignore_errors: true
   register: test_six
 
 - name: "INVENTORY_ITEM 6: ASSERT - Inventory item creation with role"
