--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,6 +82,8 @@ jobs:
             NETBOX_DOCKER_VERSION: 2.5.3
           - VERSION: "v3.5"
             NETBOX_DOCKER_VERSION: 2.6.1
+          - VERSION: "v3.6"
+            NETBOX_DOCKER_VERSION: 2.7.0
         # If we want to integration test wiht all supported Python:
         #python-version: ["3.9", "3.10", "3.11"]
 
