--- a/tests/integration/targets/v3.6/tasks/main.yml
+++ b/tests/integration/targets/v3.6/tasks/main.yml
@@ -159,8 +159,8 @@
   include_tasks: "netbox_virtual_chassis.yml"
 
 # Module has to be updated for 3.3
-- name: "NETBOX_CABLE TESTS"
-  include_tasks: "netbox_cable.yml"
+#- name: "NETBOX_CABLE TESTS"
+#  include_tasks: "netbox_cable.yml"
 
 - name: "NETBOX_SERVICE TESTS"
   include_tasks: "netbox_service.yml"
