--- a/tests/integration/targets/v3.4/tasks/netbox_inventory_item.yml
+++ b/tests/integration/targets/v3.4/tasks/netbox_inventory_item.yml
@@ -155,3 +155,48 @@
     that:
       - test_six.failed
       - test_six.msg == "Could not resolve id of inventory_item_role: Foo"
+
+- name: "INVENTORY_ITEM 7: Create inventory item with component"
+  netbox.netbox.netbox_inventory_item:
+    netbox_url: http://localhost:32768
+    netbox_token: 0123456789abcdef0123456789abcdef01234567
+    data:
+      device: test100
+      name: test_component
+      component_type: "dcim.interface"
+      component:
+        name: GigabitEthernet2
+        device: "test100"
+    state: present
+  register: test_seven
+
+- name: "INVENTORY_ITEM 7: ASSERT - Inventory item creation with role"
+  ansible.builtin.assert:
+    that:
+      - test_seven is changed
+      - test_seven.diff.before.state == "absent"
+      - test_seven.diff.after.state == "present"
+      - test_seven.inventory_item.name == "test_component"
+      - test_seven.inventory_item.component_type == "dcim.interface"
+      - test_seven.inventory_item.component_id == 4
+      - test_seven.inventory_item.device == 1
+      - test_seven.msg == "inventory_item test_component created"
+
+- name: "INVENTORY_ITEM 8: Create inventory item with component_type"
+  netbox.netbox.netbox_inventory_item:
+    netbox_url: http://localhost:32768
+    netbox_token: 0123456789abcdef0123456789abcdef01234567
+    data:
+      device: test100
+      name: test_component
+      component:
+        name: GigabitEthernet2
+        device: "test100"
+    state: present
+  register: test_eight
+
+- name: "INVENTORY_ITEM 8: ASSERT - Inventory item creation with missing component_type"
+  ansible.builtin.assert:
+    that:
+      - test_eight.failed
+      - test_eight.msg == "parameters are required together: component_type, component"
