feat: Add config-template support

--- a/tests/integration/targets/v3.6/tasks/main.yml
+++ b/tests/integration/targets/v3.6/tasks/main.yml
@@ -305,3 +305,8 @@
         - netbox_fhrp_group_assignmen
   tags:
     - netbox_fhrp_group_assignmen
+
+- name: "NETBOX_CONFIG_TEMPLATE"
+  include_tasks: "netbox_config_template.yml"
+  tags:
+    - netbox_config_template
