adjusted integration test

--- a/tests/integration/targets/v3.5/tasks/netbox_device.yml
+++ b/tests/integration/targets/v3.5/tasks/netbox_device.yml
@@ -133,7 +133,7 @@
       face: "Front"
       tags:
         - "schnozzberry"
-      tenant: "Test Tenant"
+        tenant: 1
       asset_tag: "1234"
     state: present
   register: test_four
