Update changelog yaml

--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -831,3 +831,15 @@ releases:
         name: netbox_config_template
         namespace: ''
     release_date: '2023-10-18'
+  3.16.0:
+    changes:
+      bugfixes:
+        - nb_lookup - Allow multiple IDs in nb_lookup [#1042](https://github.com/netbox-community/ansible_modules/pull/1042)
+        - Improve error reporting for missing module [#1126](https://github.com/netbox-community/ansible_modules/pull/1126)
+        - nb_inventory - Fix API cache failure [#1111](https://github.com/netbox-community/ansible_modules/pull/1111)
+      minor_changes:
+        - nb_inventory - Add facility group_by option [#1059](https://github.com/netbox-community/ansible_modules/pull/1059)
+        - netbox_power_port_template - Add option module_type to netbox_power_port_template [#1105](https://github.com/netbox-community/ansible_modules/pull/1105)
+        - nb_inventory - Enable ansible-vault strings in config-context data [#1114](https://github.com/netbox-community/ansible_modules/pull/1114)
+        - netbox_platform - Add config_template option to netbox_platform [#1119](https://github.com/netbox-community/ansible_modules/pull/1119)
+    release_date: '2023-12-10'
