--- a/tests/integration/targets/v3.7/tasks/main.yml
+++ b/tests/integration/targets/v3.7/tasks/main.yml
@@ -228,14 +228,15 @@
   tags:
     - netbox_export_template
 
-- name: "NETBOX_WEBHOOK TESTS"
-  include_tasks:
-    file: "netbox_webhook.yml"
-    apply:
-      tags:
-        - netbox_webhook
-  tags:
-    - netbox_webhook
+# Must update for 3.7
+#- name: "NETBOX_WEBHOOK TESTS"
+# include_tasks:
+#   file: "netbox_webhook.yml"
+#   apply:
+#     tags:
+#       - netbox_webhook
+# tags:
+#   - netbox_webhook
 
 - name: "NETBOX_L2VPN TESTS"
   include_tasks:
