Add tests for netbox_virtual_disk

--- a/tests/integration/targets/v3.7/tasks/main.yml
+++ b/tests/integration/targets/v3.7/tasks/main.yml
@@ -311,3 +311,8 @@
   include_tasks: "netbox_config_template.yml"
   tags:
     - netbox_config_template
+
+- name: "NETBOX_VIRTUAL_DISK"
+  include_tasks: "netbox_virtual_disk.yml"
+  tags:
+    - netbox_virtual_disk
