--- a/tests/integration/targets/inventory-v3.7/files/test-inventory.yml
+++ b/tests/integration/targets/inventory-v3.7/files/test-inventory.yml
@@ -6,6 +6,7 @@ validate_certs: False
 
 config_context: True
 plurals: False
+virtual_disks: True
 interfaces: True
 virtual_disks: True
 services: True
